node_single/envoy/dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-envoy
  labels:
    app: node-envoy
spec:
  selector:
    matchLabels:
      app: node-envoy
  template:
    metadata:
      labels:
        app: node-envoy
    spec:
      containers:
      - name: node-envoy
        image: 128.110.154.132:5000/node-envoy
        imagePullPolicy: Always
        env:
        - name: "ENVOY_LB_ALG"
          value: "LEAST_REQUEST"
        - name: "SERVICE_NAME"
          value: "node-single-test-headless"
        ports:
        - name: http
          containerPort: 15000
        - name: envoy-admin
          containerPort: 9901
