node_single/envoy/headless_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-single-headless
spec:
  clusterIP: None
  ports:
  - name: http
    port: 14000
    protocol: TCP
  selector:
    app: node-single
