node_single/envoy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-envoy
  labels:
    app: node--envoy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 15000
    targetPort: http
    protocol: TCP
  selector:
    app: node-envoy
